--- a/index.html
+++ b/index.html
@@ -2120,7 +2120,7 @@
                                     <div class="signupbuttonbox"><a href="#" class="signupbtn">Sign up</a></div>
                                 </div>
                                 <div class="sociallinks">
-                                    <div class="footersociallinks">
+                                    <div class="popularnewssociallinks">
                                                                     <a href="" class="sociallink"><i class="ri-linkedin-fill"></i></a>
                                                                     <a href="" class="sociallink"><i class="ri-facebook-fill"></i></a>
                                                                     <a href="" class="sociallink"><i class="ri-instagram-line"></i></a>
