--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <div class="col-lg-12">
                                 <ul class="categories">
                                     <li>
-                                        <a href="#">दिल्ली NCR</a>
+                                        <a href="../delhi-ncr-page/delhincrpage.html">दिल्ली NCR</a>
                                     </li>
                                     <li>
                                         <a href="#">नोएडा-ग्रेनो</a>
@@ -167,7 +167,7 @@
                             </div>
                                 <ul class="sidebarmenu">
                                         <li>
-                                            <a href="#">दिल्ली NCR</a>
+                                            <a href="../delhi-ncr-page/delhincrpage.html">दिल्ली NCR</a>
                                         </li>
                                         <li>
                                             <a href="#">नोएडा-ग्रेनो</a>
