--- a/index.html
+++ b/index.html
@@ -105,31 +105,31 @@
                                         <a href="../delhi-ncr-page/delhincrpage.html">दिल्ली NCR</a>
                                     </li>
                                     <li>
-                                        <a href="#">नोएडा-ग्रेनो</a>
+                                        <a href="../greaternoidapage/greaternoida.html">नोएडा-ग्रेनो</a>
                                     </li>
                                     <li>
-                                        <a href="#"> गाज़ियाबाद</a>
+                                        <a href="../ghaziabadpage/ghaziabad.html"> गाज़ियाबाद</a>
                                     </li>
                                     <li>
-                                        <a href="#">उत्तर प्रदेश</a>
+                                        <a href="../uttarpradeshpage/uttarpradesh.html">उत्तर प्रदेश</a>
                                     </li>
                                     <li>
-                                        <a href="#">भारत</a>
+                                        <a href="../Indiapage/India.html">भारत</a>
                                     </li>
                                     <li>
-                                        <a href="#">विदेश</a>
+                                        <a href="../foriegnpage/foriegn.html">विदेश</a>
                                     </li>
                                     <li>
-                                        <a href="#">राजनीति</a>
+                                        <a href="../politicspage/politics.html">राजनीति</a>
                                     </li>
                                     <li>
-                                        <a href="#">सामान्य ज्ञान</a>
+                                        <a href="../generealknowledgepage/gk.html">सामान्य ज्ञान</a>
                                     </li>
                                     <li>
-                                        <a href="#">खेल</a>
+                                        <a href="../sportspage/sports.html">खेल</a>
                                     </li>
                                     <li>
-                                        <a href="#">मनोरंजन</a>
+                                        <a href="../entertainmentpage/entertain.html">मनोरंजन</a>
                                     </li>
                                 </ul>
                                 <!-- menu bar starts here  -->
@@ -170,31 +170,31 @@
                                             <a href="../delhi-ncr-page/delhincrpage.html">दिल्ली NCR</a>
                                         </li>
                                         <li>
-                                            <a href="#">नोएडा-ग्रेनो</a>
+                                            <a href="../greaternoidapage/greaternoida.html">नोएडा-ग्रेनो</a>
                                         </li>
                                         <li>
-                                            <a href="#"> गाज़ियाबाद</a>
+                                            <a href="../ghaziabadpage/ghaziabad.html"> गाज़ियाबाद</a>
                                         </li>
                                         <li>
-                                            <a href="#">उत्तर प्रदेश</a>
+                                            <a href="../uttarpradeshpage/uttarpradesh.html">उत्तर प्रदेश</a>
                                         </li>
                                         <li>
-                                            <a href="#">भारत</a>
+                                            <a href="../Indiapage/India.html">भारत</a>
                                         </li>
                                         <li>
-                                            <a href="#">विदेश</a>
+                                            <a href="../foriegnpage/foriegn.htmls">विदेश</a>
                                         </li>
                                         <li>
-                                            <a href="#">राजनीति</a>
+                                            <a href="../politicspage/politics.html">राजनीति</a>
                                         </li>
                                         <li>
-                                            <a href="#">सामान्य ज्ञान</a>
+                                            <a href="../generealknowledgepage/gk.html">सामान्य ज्ञान</a>
                                         </li>
                                         <li>
-                                            <a href="#">खेल</a>
+                                            <a href="../sportspage/sports.html">खेल</a>
                                         </li>
                                         <li>
-                                            <a href="#">मनोरंजन</a>
+                                            <a href="../entertainmentpage/entertain.html">मनोरंजन</a>
                                         </li>
                                     </ul>
                                     <div class="sociallinks">
