collected all files in one folder

--- a/index.html
+++ b/index.html
@@ -102,34 +102,34 @@
                                 <div class="col-lg-12">
                                 <ul class="categories">
                                     <li>
-                                        <a href="../delhi-ncr-page/delhincrpage.html">दिल्ली NCR</a>
+                                        <a href="delhincrpage.html">दिल्ली NCR</a>
                                     </li>
                                     <li>
-                                        <a href="../greaternoidapage/greaternoida.html">नोएडा-ग्रेनो</a>
+                                        <a href="greaternoida.html">नोएडा-ग्रेनो</a>
                                     </li>
                                     <li>
-                                        <a href="../ghaziabadpage/ghaziabad.html"> गाज़ियाबाद</a>
+                                        <a href="ghaziabad.html"> गाज़ियाबाद</a>
                                     </li>
                                     <li>
-                                        <a href="../uttarpradeshpage/uttarpradesh.html">उत्तर प्रदेश</a>
+                                        <a href="uttarpradesh.html">उत्तर प्रदेश</a>
                                     </li>
                                     <li>
-                                        <a href="../Indiapage/India.html">भारत</a>
+                                        <a href="India.html">भारत</a>
                                     </li>
                                     <li>
-                                        <a href="../foriegnpage/foriegn.html">विदेश</a>
+                                        <a href="foriegn.html">विदेश</a>
                                     </li>
                                     <li>
-                                        <a href="../politicspage/politics.html">राजनीति</a>
+                                        <a href="politics.html">राजनीति</a>
                                     </li>
                                     <li>
-                                        <a href="../generealknowledgepage/gk.html">सामान्य ज्ञान</a>
+                                        <a href="gk.html">सामान्य ज्ञान</a>
                                     </li>
                                     <li>
-                                        <a href="../sportspage/sports.html">खेल</a>
+                                        <a href="sports.html">खेल</a>
                                     </li>
                                     <li>
-                                        <a href="../entertainmentpage/entertain.html">मनोरंजन</a>
+                                        <a href="entertain.html">मनोरंजन</a>
                                     </li>
                                 </ul>
                                 <!-- menu bar starts here  -->
@@ -167,34 +167,34 @@
                             </div>
                                 <ul class="sidebarmenu">
                                         <li>
-                                            <a href="../delhi-ncr-page/delhincrpage.html">दिल्ली NCR</a>
+                                            <a href="delhincrpage.html">दिल्ली NCR</a>
                                         </li>
                                         <li>
-                                            <a href="../greaternoidapage/greaternoida.html">नोएडा-ग्रेनो</a>
+                                            <a href="greaternoida.html">नोएडा-ग्रेनो</a>
                                         </li>
                                         <li>
-                                            <a href="../ghaziabadpage/ghaziabad.html"> गाज़ियाबाद</a>
+                                            <a href="ghaziabad.html"> गाज़ियाबाद</a>
                                         </li>
                                         <li>
-                                            <a href="../uttarpradeshpage/uttarpradesh.html">उत्तर प्रदेश</a>
+                                            <a href="uttarpradesh.html">उत्तर प्रदेश</a>
                                         </li>
                                         <li>
-                                            <a href="../Indiapage/India.html">भारत</a>
+                                            <a href="India.html">भारत</a>
                                         </li>
                                         <li>
-                                            <a href="../foriegnpage/foriegn.htmls">विदेश</a>
+                                            <a href="foriegn.htmls">विदेश</a>
                                         </li>
                                         <li>
-                                            <a href="../politicspage/politics.html">राजनीति</a>
+                                            <a href="politics.html">राजनीति</a>
                                         </li>
                                         <li>
-                                            <a href="../generealknowledgepage/gk.html">सामान्य ज्ञान</a>
+                                            <a href="gk.html">सामान्य ज्ञान</a>
                                         </li>
                                         <li>
-                                            <a href="../sportspage/sports.html">खेल</a>
+                                            <a href="sports.html">खेल</a>
                                         </li>
                                         <li>
-                                            <a href="../entertainmentpage/entertain.html">मनोरंजन</a>
+                                            <a href="entertain.html">मनोरंजन</a>
                                         </li>
                                     </ul>
                                     <div class="sociallinks">
