add arrow on tape

--- a/index.html
+++ b/index.html
@@ -273,6 +273,13 @@
                                                         </a>
                                                 </li> 
                                             </ul>
+                                            <div class="arrowontape">
+                                                <div class="lefttrending"><span class="flashlighticn"><i class="ri-flashlight-fill"></i></span>TRENDING  </div>
+                                                <div class="rightarrowontapebox">
+                                                    <div class="leftarrowontape"><i class="ri-arrow-left-line"></i></div>
+                                                    <div class="rightarrowontape"><i class="ri-arrow-right-line"></i></div>
+                                                </div>
+                                        </div>
                                     </div>
                             </div>
                             <div class="col-lg-12 scont">
