fix dark bg of components

--- a/politics.html
+++ b/politics.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>राजनीति Latest News</title>
-    <link rel="shortcut icon" href="../assets/images/favicon icon.webp" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"rel="stylesheet"/>
+        <link rel="shortcut icon" href="../assets/images/favicon icon.webp" type="image/x-icon">
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"rel="stylesheet"/>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> 
     </head>
 </head>
 <body>
@@ -225,14 +226,14 @@
             
                 <div class="heropagenavigator">
                           <ol class="navigatorlistbox">
-                            <li class="heropagenavigatorlistitem"><a href="">1</a></li>
-                            <li class="heropagenavigatorlistitem"><a href="">2</a></li>
-                            <li class="heropagenavigatorlistitem"><a href="">3</a></li>
-                            <li class="heropagenavigatorlistitem"><a href="">4</a></li>
-                            <li class="heropagenavigatorlistitem"><a href="">5</a></li>
-                            <li class="heropagenavigatorlistitem"><a href="">6</a></li>
-                            <li class="heropagenavigatorlistitem"><a href="">7</a></li>
-                            <li class="heropagenavigatorlistitem"><a href="">8</a></li>
+                            <li class="heropagenavigatorlistitem active" value="1" onclick="activeLink()" > 1</li>
+                            <li class="heropagenavigatorlistitem " value="2" onclick="activeLink()">2</li>
+                            <li class="heropagenavigatorlistitem" value="3" onclick="activeLink()">3</li>
+                            <li class="heropagenavigatorlistitem" value="4" onclick="activeLink()">4</li>
+                            <li class="heropagenavigatorlistitem" value="5" onclick="activeLink()">5</li>
+                            <li class="heropagenavigatorlistitem" value="6" onclick="activeLink()">6</li>
+                            <li class="heropagenavigatorlistitem" value="7" onclick="activeLink()">7</li>
+                            <li class="heropagenavigatorlistitem" value="8" onclick="activeLink()">8</li>
                         </ol>
                 </div>
                 <div class="relatedtopicsbox">
@@ -284,7 +285,10 @@
         </div>
     </div>
 </div>
-<script src="app.js"></script>
+
+            
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<script src="./app.js"></script>
 </body>
 </html>
